tests/paczka1/small_fuzzy/25342865.err
Error in line 9: ACD A671 61,8
Error in line 11: F7XELcUqsoF A878 36,1
Error in line 15: F7XELcUqsoF A432 67,8
